force-app/main/default/objects/Loan_Provider__c/Loan_Provider__c.object-meta.xml
<CustomObject>
    <label>Loan Provider</label>
    <nameField>
        <label>Loan Provider Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Providers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>