force-app/main/default/objects/Loan_Provider__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bangalore East</fullName>
            </value>
            <value>
                <fullName>Bangalore West</fullName>
            </value>
            <value>
                <fullName>Bangalore North</fullName>
            </value>
            <value>
                <fullName>Bangalore South</fullName>
            </value>
            <value>
                <fullName>Bangalore Central</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>