force-app/main/default/objects/Loan_Provider__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <label>Provider Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HDFC</fullName>
            </value>
            <value>
                <fullName>IDBI</fullName>
            </value>
            <value>
                <fullName>CUB</fullName>
            </value>
            <value>
                <fullName>SBI</fullName>
            </value>
            <value>
                <fullName>ICICI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>